2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	* python/mushin/command/project.py:
	* python/mushin/command/replicate.py:
	* python/mushin/command/thing.py:
	* python/mushin/common/log.py:
	* python/mushin/common/logcommand.py:
	  Rename imports.

2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Renamed to mushin.

2009-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  Add notes on date stuff.
	* couchdb/_attachments/jquery.gtd.js:
	  Comment that we need date.js loaded.
	  Remove unused function.
	  Comment prettyDate.
	* couchdb/vendor/couchapp/date.js:
	  Add Date.setRFC3339()
	* couchdb/vendor/couchapp/_attachments/date.js:
	  Create a symlink so that we can also serve date.js to browser.
	* couchdb/views/recent-things/map.js:
	  Only emit docs with a start date.  
	* couchdb/templates/index/row.html:
	  It's title, not description.
	* couchdb/templates/thing.html:
	* couchdb/templates/index/tail.html:
	  Make sure we include date.js before jquery.gtd.js

2009-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/replicate.py:
	  Handle replication setup failures.

2009-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/list.py:
	  More display fixes.

2009-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/shows/edit.js:
	* couchdb/templates/edit.html:
	  Allow passing description as a GET parameter

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	* python/things/command/project.py:
	  Colorize short id display too.

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Extract Displayer._color()
	  Add Displayer.project()
	* python/things/command/project.py: